<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#807C94DC"
    android:orientation="vertical"
    tools:context=".ActualizarDatos">

    <TextView
        android:id="@+id/edtEncuesta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtCod4"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="161dp"
        android:layout_height="42dp"
        android:text="@string/programa"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="216dp"
        android:layout_height="131dp"
        android:layout_marginEnd="150dp">

        <RadioButton
            android:id="@+id/rdSistemas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/sistemas"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdMecanica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/mecanica"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdIndustral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/industrial"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdMecatronica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/mecatronica"
            android:textColor="#000000"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/computador"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="263dp">

        <RadioButton
            android:id="@+id/rdCompSi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/si"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdCompNo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/no"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/internet"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="263dp">

        <RadioButton
            android:id="@+id/rdIntSi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/si"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdIntNo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/no"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/telefono"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="263dp">

        <RadioButton
            android:id="@+id/rdTelSi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/si"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdTelNo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:text="@string/no"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:backgroundTint="#801C3681"
        android:text="@string/actualizar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#801C3681"
        android:text="@string/eliminar"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        android:textStyle="normal" />

</LinearLayout>