<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#807C94DC"
    android:backgroundTint="#807C94DC"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtNumEncuestados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#CA5555"
        android:text="@string/encuestado"
        android:textColor="#E8040505"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codigo"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programa"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPrograma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computador"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />
</LinearLayout>